<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/transparent"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cardView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:checkable="false"
                            android:clickable="true"
                            android:focusable="false"
                            app:cardBackgroundColor="@color/transparent"
                            app:cardElevation="0dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:id="@+id/detalhe_evento_thumb"
                                    android:layout_width="150dp"
                                    android:layout_height="150dp"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:contentDescription="@string/imagem_description"
                                    android:scaleType="fitXY"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/img404" />

                                <TextView
                                    android:id="@+id/tv_item_evento_preco"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="8dp"
                                    android:layout_weight="1"
                                    android:text="@string/detalhe_evento_preco"
                                    android:textSize="20sp"
                                    app:drawableStartCompat="@drawable/ic_money_black"
                                    app:layout_constraintBottom_toTopOf="@+id/tv_item_evento_data"
                                    app:layout_constraintStart_toStartOf="@+id/tv_item_evento_data" />

                                <TextView
                                    android:id="@+id/tv_item_evento_data"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="16dp"
                                    android:layout_marginEnd="16dp"
                                    android:text="@string/detalhe_evento_data"
                                    android:textAlignment="viewEnd"
                                    android:textSize="20sp"
                                    app:drawableStartCompat="@drawable/ic_date_black"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </com.google.android.material.card.MaterialCardView>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/detalhe_evento_nome"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/detalhe_evento"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:text="@string/detalhe_descricao"
                                android:textColor="#000000"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/detalhe_evento_nome" />

                            <androidx.core.widget.NestedScrollView
                                android:id="@+id/nestedScrollView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView10">

                                <TextView
                                    android:id="@+id/detalhe_evento_descricao"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginRight="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:text="@string/detalhe_texto"
                                    android:textColor="#000000" />
                            </androidx.core.widget.NestedScrollView>

                            <Button
                                android:id="@+id/btn_event_checkIn"
                                style="@style/Widget.Material3.Button.ElevatedButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:backgroundTint="@color/AvenueSecundary"
                                android:text="@string/detalhe_btn_fazercheckin"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </RelativeLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>